PROJECTFORGE-3048 use configured min password length for password check, remove unused duplicated code