@@ -98,19 +98,19 @@ public class UserTest extends AbstractTestBase
     assertEquals("UserTest", user.getUsername());
     assertNull(user.getPassword()); // Not SHA, should be ignored.
     assertEquals("Description", user.getDescription());
-    assertEquals(new Integer(1), user.getTenant() != null ? user.getTenant().getPk() : new Integer(-1));
+    assertEquals(Integer.valueOf(1), user.getTenant() != null ? user.getTenant().getPk() : Integer.valueOf(-1));
     user.setDescription("Description\ntest");
     user.setPassword("secret");
     userService.update(user);
     user = userService.getById(id);
     assertEquals("Description\ntest", user.getDescription());
-    assertEquals(new Integer(1), user.getTenant() != null ? user.getTenant().getPk() : new Integer(-1));
+    assertEquals(Integer.valueOf(1), user.getTenant() != null ? user.getTenant().getPk() : Integer.valueOf(-1));
     assertNull(user.getPassword()); // Not SHA, should be ignored.
     user.setPassword("SHA{...}");
     userService.update(user);
     user = userService.getById(id);
     assertEquals("SHA{...}", user.getPassword());
-    assertEquals(new Integer(1), user.getTenant() != null ? user.getTenant().getPk() : new Integer(-1));
+    assertEquals(Integer.valueOf(1), user.getTenant() != null ? user.getTenant().getPk() : Integer.valueOf(-1));
   }
 
   @Test
@@ -132,23 +132,15 @@ public class UserTest extends AbstractTestBase
   @Test
   public void testPasswordQuality()
   {
-    assertEquals("Empty password not allowed.", Const.MESSAGE_KEY_PASSWORD_QUALITY_CHECK,
-        userService.checkPasswordQuality(null));
-    assertEquals("Password with less than 6 characters not allowed.", Const.MESSAGE_KEY_PASSWORD_QUALITY_CHECK,
-        userService
-            .checkPasswordQuality(""));
-    assertEquals("Password with less than 6 characters not allowed.", Const.MESSAGE_KEY_PASSWORD_QUALITY_CHECK,
-        userService
-            .checkPasswordQuality("o2345"));
-    assertEquals("Password must have one non letter at minimum.", Const.MESSAGE_KEY_PASSWORD_QUALITY_CHECK, userService
-        .checkPasswordQuality("ProjectForge"));
-    assertEquals("Password must have one letter at minimum.", Const.MESSAGE_KEY_PASSWORD_QUALITY_CHECK, userService
-        .checkPasswordQuality("123456"));
-    assertEquals("Password must have one letter at minimum.", Const.MESSAGE_KEY_PASSWORD_QUALITY_CHECK, userService
-        .checkPasswordQuality("1234567"));
-    assertNull("Password OK.", userService.checkPasswordQuality("kjh!id"));
-    assertNull("Password OK.", userService.checkPasswordQuality("kjh8idsf"));
-    assertNull("Password OK.", userService.checkPasswordQuality("  5 g "));
+    assertEquals("Empty password not allowed.", Const.MESSAGE_KEY_PASSWORD_QUALITY_CHECK, userService.checkPasswordQuality(null));
+    assertEquals("Password with less than 10 characters not allowed.", Const.MESSAGE_KEY_PASSWORD_QUALITY_CHECK, userService.checkPasswordQuality(""));
+    assertEquals("Password with less than 10 characters not allowed.", Const.MESSAGE_KEY_PASSWORD_QUALITY_CHECK, userService.checkPasswordQuality("abcd12345"));
+    assertEquals("Password must have one non letter at minimum.", Const.MESSAGE_KEY_PASSWORD_QUALITY_CHECK, userService.checkPasswordQuality("ProjectForge"));
+    assertEquals("Password must have one letter at minimum.", Const.MESSAGE_KEY_PASSWORD_QUALITY_CHECK, userService.checkPasswordQuality("1234567890"));
+    assertEquals("Password must have one letter at minimum.", Const.MESSAGE_KEY_PASSWORD_QUALITY_CHECK, userService.checkPasswordQuality("12345678901"));
+    assertNull("Password OK.", userService.checkPasswordQuality("kabcdjh!id"));
+    assertNull("Password OK.", userService.checkPasswordQuality("kjh8iabcddsf"));
+    assertNull("Password OK.", userService.checkPasswordQuality("  5     g "));
   }
 
   // TODO HISTORY
